--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-  	<div class="chart">
+  	<div class="parrallelDiv">
 
-  	</div>
+    </div>
     <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="./lib/d3/d3.min.js"></script>
+    <script src="./lib/queue/queue.js" type='text/javascript'></script>
+
     <script src="./js/data.js"></script>
+    <script src="./js/parrallelCords.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
