details on demand

--- a/TNM048-Handledning1Post/index.html
+++ b/TNM048-Handledning1Post/index.html
@@ -26,9 +26,9 @@
                     <h5><strong>Information</strong></h5>
                     <hr>
                     <p><span id="name">Game</span></p>
-                    <p><span id="publisher">Publisher</span></p>
-                    <p><span id="developer">Developer</span></p>
                     <p><span id="sales">Sales</span></p>
+                    <p><span id="score">Score</span></p>
+                    <p><span id="genre">Genre</span></p>
                 </div>
               </div>
             </div>
@@ -45,6 +45,7 @@
 
     <script src="./js/data.js"></script>
     <script src="./js/parrallelCords.js"></script>
+    <script src="./js/circleDiagram.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
