--- a/index.html
+++ b/index.html
@@ -25,10 +25,22 @@
                     <br>
                     <h5><strong>Information</strong></h5>
                     <hr>
-                    <p><span id="name">Game</span></p>
-                    <p><span id="publisher">Publisher</span></p>
-                    <p><span id="developer">Developer</span></p>
-                    <p><span id="sales">Sales</span></p>
+                    <p><span id="name">Name: </span></p>
+                    <p><span id="platform">Platform: </span></p>
+                    <p><span id="year">Year of relese: </span></p>
+                    <p><span id="genre">Genre: </span></p>
+                    <p><span id="publisher">Publisher: </span></p>
+                    <p><span id="NA_sales">NA sales: </span></p>
+                    <p><span id="EU_sales">EU sales: </span></p>
+                    <p><span id="JP_sales">JP sales: </span></p>
+                    <p><span id="other_sales">Other sales: </span></p>
+                    <p><span id="global_sales">Global sales: </span></p>
+                    <p><span id="critic_score">Critic score: </span></p>
+                    <p><span id="critic_count">Critic count: </span></p>
+                    <p><span id="user_score">User score: </span></p>
+                    <p><span id="user_count">User count: </span></p>
+                    <p><span id="developer">Developer: </span></p>
+                    <p><span id="rating">Rating: </span></p>
                 </div>
               </div>
             </div>
