--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <div class="col-sm-12 col-md-10 col-lg-10 col-xl-10">
               <div id="parallel"></div>
-              <div id="circleDiagram"></div>
+              <div id="pie"></div>
             </div>
 
             <div class="col-sm-12 col-md-2 col-lg-2 col-xl-2">
@@ -57,6 +57,7 @@
 
     <script src="./js/data.js"></script>
     <script src="./js/parrallelCords.js"></script>
+    <script src="./js/circleDiagram.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
