--- a/TNM048-Handledning1Post/index.html
+++ b/TNM048-Handledning1Post/index.html
@@ -31,6 +31,17 @@
                     <p><span id="genre">Genre</span></p>
                 </div>
               </div>
+              <div class="row">
+                <div class="dropdown" id="dropdownMeny">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Clustering
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenu">
+                    <a class="dropdown-item" type="button">Genres</a>
+                    <a class="dropdown-item" type="button">Ratings</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -39,8 +50,10 @@
   	
     <script src="./lib/jquery/jquery.min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
     <script src="./lib/d3/d3.min.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./lib/colorbrewer/colorbrewer.js" type='text/javascript'></script>
     <script src="./lib/queue/queue.js" type='text/javascript'></script>
 
     <script src="./js/data.js"></script>
