--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="./lib/d3/d3.min.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./lib/colorbrewer/colorbrewer.js" type='text/javascript'></script>
     <script src="./lib/queue/queue.js" type='text/javascript'></script>
 
     <script src="./js/data.js"></script>
