--- a/index.html
+++ b/index.html
@@ -7,21 +7,27 @@
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css" />
   </head>
   <body class="container-fluid">
-      <div class="card text-center">
-        <div class="card-header">
+      <!--- Container -->
+	  <div class="card text-center">
+        <!-- Header -->
+		<div class="card-header">
           <h2>Video Game sales with ratings</h2>
         </div>
+		<!-- Body -->
         <div class="card-body">
           <div class="row">
 
-            <div class="col-sm-12 col-md-10 col-lg-10 col-xl-10">
+            <!-- Large Center Right -->
+			<div class="col-sm-12 col-md-10 col-lg-10 col-xl-10">
               <div id="parallel"></div>
               <div id="pie"></div>
             </div>
 
-            <div class="col-sm-12 col-md-2 col-lg-2 col-xl-2">
+            <!-- Side Bar -->
+			<div class="col-sm-12 col-md-2 col-lg-2 col-xl-2">
               <div class="row">
-                <div class="col-12" id="tooltip">
+                <!-- ToolTip -->
+				<div class="col-12" id="tooltip">
                     <br>
                     <h5><strong>Information</strong></h5>
                     <hr>
@@ -49,14 +55,16 @@
       </div>
     </div>
     
-    <script src="./lib/jquery/jquery.min.js"></script>
+    <!-- External Scripts -->
+	<script src="./lib/jquery/jquery.min.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="./lib/d3/d3.min.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="./lib/colorbrewer/colorbrewer.js" type='text/javascript'></script>
     <script src="./lib/queue/queue.js" type='text/javascript'></script>
-
-    <script src="./js/data.js"></script>
+	
+    <!-- Internal Scripts -->
+	<script src="./js/data.js"></script>
     <script src="./js/parrallelCords.js"></script>
     <script src="./js/circleDiagram.js"></script>
     <script src="./js/main.js"></script>
